--- a/campus_galerie_photo.html
+++ b/campus_galerie_photo.html
@@ -13,22 +13,7 @@
     d'index du site, sous le format .ico pour compatibilié IE6 et linkez la-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
- <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="favicon.png" type="image/png">
-  <link rel="icon" sizes="32x32" href="favicon-32.png" type="image/png">
-  <link rel="icon" sizes="64x64" href="favicon-64.png" type="image/png">
-  <link rel="icon" sizes="96x96" href="favicon-96.png" type="image/png">
-  <link rel="icon" sizes="196x196" href="favicon-196.png" type="image/png">
-  <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png">
-  <link rel="icon" href="animated_favicon.gif" type="image/gif">
-  <meta name="msapplication-TileImage" content="favicon-144.png">
-  <meta name="msapplication-TileColor" content="#FFFFFF">-->
-  <!-- liens bootstraps -->
+ 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -36,37 +21,43 @@
   <!-- Tout les liens -->
 
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/galerie.css">
+  <link rel="stylesheet" href="css/galeriecampus.css">
 
 
 </head>
 
 <body>
-
+<div section="galery">
   <div class="thumb">
     <!-- Image -->
-    <a href="index.html">
+    <a href="index.php">
       <!-- Label -->
-      <span>vive les etudiants</span>
+      <span>CAROLO EXPRESS</span>
     </a>
   </div>
 
-  <div class="thumb1">
+  <div class="thumb">
     <!-- Image>-->
-    <a id="un" href="index.html">
-      <!-- Label-->
-      <span>et les etudiantes</span>
+    <a id="un" href="index.php">
+      <!--< Label-->
+      <span>PIQUE-NIQUE</span>
     </a>
   </div>
 
-  <!--<div class="thumb">-->
-    <!-- Image 
-    <a href="#">-->
-      <!-- Label
-      <span>sans oublier le campus</span>
+ <div class="thumb">
+   
+    <a id="deux" href="galerie.php">
+      <span>CAROLO WARRIOR</span>
     </a>
   </div>
--->
+
+  <div class="thumb">
+    
+       <a id="trois" href="galerie.php">
+         <span>CAROLO CUISINE</span>
+       </a>
+     </div>
+    </section >
 
 
 
